<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_green"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/profile1"
            android:contentDescription="@string/iv_home_contentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tv_id"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_id"
                tools:layout_editor_absoluteY="275dp" />

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/tv_user_id_hint"
                app:layout_constraintBottom_toBottomOf="@+id/tv_id"
                app:layout_constraintTop_toTopOf="@+id/tv_id"
                tools:layout_editor_absoluteX="187dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tv_name"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_name"
                tools:layout_editor_absoluteY="349dp" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/tv_user_name"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="@+id/tv_name"
                tools:layout_editor_absoluteX="185dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tv_birth"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_birth"
                tools:layout_editor_absoluteY="420dp" />

            <TextView
                android:id="@+id/tv_user_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/tv_user_birth"
                app:layout_constraintBottom_toBottomOf="@+id/tv_birth"
                app:layout_constraintTop_toTopOf="@+id/tv_birth"
                tools:layout_editor_absoluteX="187dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_mbti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tv_mbti"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_mbti"
                tools:layout_editor_absoluteY="499dp" />

            <TextView
                android:id="@+id/tv_user_mbti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/tv_user_mbti"
                app:layout_constraintBottom_toBottomOf="@+id/tv_mbti"
                app:layout_constraintTop_toTopOf="@+id/tv_mbti"
                tools:layout_editor_absoluteX="187dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/tv_blog"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="561dp" />

            <TextView
                android:id="@+id/tv_user_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/tv_user_blog"
                app:layout_constraintEnd_toEndOf="@+id/tv_blog"
                app:layout_constraintStart_toStartOf="@+id/tv_blog"
                app:layout_constraintTop_toBottomOf="@+id/tv_blog" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/selector_button_image"
            android:paddingStart="90dp"
            android:text="@string/btn_close"
            android:textColor="@drawable/selector_button_text"
            android:background="@drawable/selector_button_background"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="781dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>